--- a/css/style.css
+++ b/css/style.css
@@ -41,19 +41,12 @@ body {
 
 .title-bar {
     background-color: #030618;
-    width: 100vw;
 }
 
 .footer {
-    background-color: #030f18;
-    width: 100vw;
-    height: 100px;
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 0px;
+    padding: 50px 0;
+    text-align: center;
 }
 
 .no-margin {
