Add more statistics

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -86,6 +86,7 @@ body {
     background-color: #2C394B;
     border-radius: 8px;
     margin: 12px;
+    padding: 12px;
     width: 250px;
     text-align: center;
 }
