--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,6 +89,11 @@ body {
     padding: 12px;
     width: 250px;
     text-align: center;
+    transition-duration: 0.4s;
+}
+
+.box:hover {
+    transform: scale(1.1);
 }
 
 .stat-title {
